# pam-bacchus-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
debian/: pam
debian/scripts/: postinst  prerm
src/: lib.rs  pam.rs  params.rs
