[package]
name = "pam-bacchus"
version = "0.3.1"
description = "Linux-PAM module for Bacchus ID"
repository = "https://github.com/bacchus-snu/pam-bacchus-rs.git"
license = "MIT"
authors = [
  "Jae Hyeon Park <skystar@bacchus.snucse.org>",
  "Wonwoo Choi <vbchunguk@bacchus.snucse.org>",
]
edition = "2021"

[dependencies]
base64 = "0.13.0"
curl = "0.4.38"
log = "0.4.14"
pam-sys = "1.0.0-alpha3"
serde_json = "1.0.64"
syslog = "5.0.0"
tweetnacl = "0.4.0"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[lib]
name = "pam_bacchus"
crate-type = ["cdylib"]

[profile.release]
lto = true
